# Testinfotecs

./: CMakeLists.txt  conanfile.py  readme.md
client/: CMakeLists.txt
client/src/: main.cpp
common/: CMakeLists.txt  DataStructures.h  Logger.cpp  Logger.h  Utils.h
server/: CMakeLists.txt
server/src/: main.cpp
testInfotecs/: CMakeLists.txt  readme.md
testInfotecs/client/: CMakeLists.txt
testInfotecs/client/src/: main.cpp
testInfotecs/common/: CMakeLists.txt  DataStructures.h  Logger.cpp
testInfotecs/server/: CMakeLists.txt
testInfotecs/server/src/: main.cpp
testInfotecs/tests/: CMakeLists.txt  test_integration.cpp
